Changelog
=========


2.3 (unreleased)
------------------

- Removed reset_grid_state action from the different tab configurations.
  It's now integrated in the tab menu.
  [phgross]

- Extended tooltip: added special handling for mails.
  [phgross]

- Removed external_edit colum in document listings,
  it's now replaced by the extended tooltip.
  [phgross]

- Activate extended tooltips also for the relateddocuments listing.
  [phgross]

- Added review_state filter for dossiertabs.
  Issue #1694 State-Filter fuer Dossiers implementieren.
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1694/
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Fixed and cleaned up the linked_ogds_author helper(including tests).
  Issue #1733 DI DIS: Journal-Tab in Eingangskorb laedt bis in alle Ewigkeit (Sanduhr)
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1733/
  [phgross]

- Added extended tooltip helper for document listings.
  [phgross]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Plone 4.2 Support: Cleaned up TAL statements in batching pt.
  [phgross]


2.2.4 (2012-09-25)
------------------

- Update Translations.
  [tschanzt]


2.2.3 (2012-09-19)
------------------

- Update French translations.
  [tschanzt]


2.2.2 (2012-07-31)
------------------

- Adjust the condition to view the personal overview (allow also administrators).
  Issue #1604 Pers. Uebersicht, "admin tabs" auch fuer Administrator ersichtlich machen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1604
  [phgross]


2.2.1 (2012-06-25)
------------------

- Removed task conditioning in get_containg_document_tab, allways return the dossier url.
  [phgross]

- Tasklisting: changed query filter syntax to avoid ORA-00920 errors.
  [phgross]


2.2 (2012-06-20)
----------------

- Personaloverview: show admin_tabs for inbox users and administrators.