@@ -5,6 +5,9 @@ Changelog
 2.3 (unreleased)
 ------------------
 
+- Update checkbox column configuration (set width attribute).
+  [phgross]
+
 - Removed reset_grid_state action from the different tab configurations.
   It's now integrated in the tab menu.
   [phgross]
